--- a/web_frontend/index.html
+++ b/web_frontend/index.html
@@ -8,6 +8,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="icon" type="image/png" href="../fevico/Leaksense.png">
+    <link rel="apple-touch-icon" href="../fevico/Leaksense.png">
     <title>LeakSense - IoT Sensor Dashboard</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,6 +25,9 @@
         <span></span>
     </button>
 
+    <!-- Mobile Menu Backdrop -->
+    <div class="mobile-menu-backdrop" id="mobileMenuBackdrop" onclick="toggleMobileMenu()"></div>
+
     <!-- Mobile Navigation Menu (Hidden on Desktop) -->
     <nav class="nav-menu" id="navMenu">
         <div class="nav-header">
@@ -32,10 +37,10 @@
         <ul class="nav-links">
             <li><a href="#" class="nav-link active" onclick="showPage('dashboard')" data-page="dashboard">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                    <rect x="3" y="3" width="7" height="7"/>
-                    <rect x="14" y="3" width="7" height="7"/>
-                    <rect x="14" y="14" width="7" height="7"/>
-                    <rect x="3" y="14" width="7" height="7"/>
+                    <rect x="3" y="3" width="7" height="7"></rect>
+                    <rect x="14" y="3" width="7" height="7"></rect>
+                    <rect x="14" y="14" width="7" height="7"></rect>
+                    <rect x="3" y="14" width="7" height="7"></rect>
                 </svg>
                 Dashboard
             </a></li>
@@ -74,10 +79,10 @@
                 <nav class="desktop-nav">
                     <a href="#" onclick="showPage('dashboard')" class="desktop-nav-link active" data-page="dashboard">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                            <rect x="3" y="3" width="7" height="7"/>
-                            <rect x="14" y="3" width="7" height="7"/>
-                            <rect x="14" y="14" width="7" height="7"/>
-                            <rect x="3" y="14" width="7" height="7"/>
+                            <rect x="3" y="3" width="7" height="7"></rect>
+                            <rect x="14" y="3" width="7" height="7"></rect>
+                            <rect x="14" y="14" width="7" height="7"></rect>
+                            <rect x="3" y="14" width="7" height="7"></rect>
                         </svg>
                         Dashboard
                     </a>
@@ -536,7 +541,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 LeakSense. IoT Sensor Monitoring System.</p>
+            <p>&copy; 2025 LeakSense. IoT Sensor Monitoring System.</p>
         </div>
     </footer>
 
